--- a/backend/.env example
+++ b/backend/.env example
@@ -1,2 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://s12029320:leemamarah@foodtruckdb.sgfvund.mongodb.net/foodtruckdb
+
+JWT_SECRET=supersecretkey123
+JWT_EXPIRES_IN=1h
