--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^13.0.3
   flutter_map: 8.1.1
   url_launcher: ^6.3.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
