--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_map: 8.1.1
   url_launcher: ^6.3.1
   http: ^1.3.0
+  shared_preferences: ^2.2.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
