--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.2.2
   image_picker: ^1.1.2
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
