--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.2.2
   image_picker: ^1.1.2
   flutter_image_compress: ^2.4.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
