--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.1.2
   flutter_image_compress: ^2.4.0
   geocoding: ^3.0.0
+  permission_handler: ^12.0.0+1
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
