--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geocoding: ^3.0.0
   permission_handler: ^12.0.0+1
   latlong2: ^0.9.0
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,7 @@ flutter:
     - assets/image/plate-001.png
     - assets/image/plate-002.png
     - assets/image/plate-007.png
+    - assets/langs/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
