--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   latlong2: ^0.9.0
   easy_localization: ^3.0.7+1
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
