change the name and icon of our APP

--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="myapp"
+        android:label="Food Trucks"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
