--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   latlong2: ^0.9.0
   easy_localization: ^3.0.7+1
   table_calendar: ^3.1.3
+  flutter_stripe: ^9.5.0
 
 dev_dependencies:
 
