--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   easy_localization: ^3.0.7+1
   table_calendar: ^3.1.3
   flutter_stripe: ^9.5.0
+  flutter_chat_ui: ^1.6.7
+  flutter_chat_types: ^3.6.2
+  uuid: ^4.1.0
 
 dev_dependencies:
 
