--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.6.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -54,7 +54,8 @@ dependencies:
   flutter_chat_ui: ^1.6.7
   flutter_chat_types: ^3.6.2
   uuid: ^4.1.0
-  intl: ^0.19.0
+  intl: ^0.20.2
+  iconsax_flutter: ^1.0.0
 
 dev_dependencies:
 
