--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
+    "npm": "^11.4.1",
+    "socket.io": "^4.8.1",
     "stripe": "^18.1.1"
   },
   "devDependencies": {
