--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_chat_types: ^3.6.2
   uuid: ^4.1.0
   intl: ^0.19.0
+  awesome_notifications: ^0.10.0
+  socket_io_client: ^3.1.2
 
 dev_dependencies:
 
