--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_rating_bar: ^4.0.1
   font_awesome_flutter: ^10.8.0
   cached_network_image: ^3.4.1
   google_maps_flutter: ^2.11.0
