--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^13.0.3
   flutter_map: 8.1.1
   url_launcher: ^6.3.1
+  flutter_compass: ^0.8.0
   http: ^1.3.0
   shared_preferences: ^2.2.2
   image_picker: ^1.1.2
