--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.2",
     "react-chartjs-2": "^5.3.0",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
