--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   cached_network_image: ^3.4.1
   google_maps_flutter: ^2.11.0
+  google_fonts: ^6.2.1
   geolocator: ^13.0.3
   flutter_map: 8.1.1
   url_launcher: ^6.3.1
