--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -86,6 +86,11 @@ flutter_launcher_icons:
 flutter:
   uses-material-design: true
 
+  fonts:
+    - family: Huninn
+      fonts:
+        - asset: assets/fonts/Huninn-Regular.ttf
+        
   assets:
     - assets/image/truckLogo.png
     - assets/image/plate-003.png
