added pie chart to owner reviews

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   iconsax_flutter: ^1.0.0
   socket_io_client: ^3.1.2
   awesome_notifications: ^0.10.0
+  fl_chart: ^0.68.0
 
 dev_dependencies:
 
